<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alphaNumericTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_one"
            android:hint="@string/alphanumeric_label"
            android:inputType="textMultiLine"
            app:endIconDrawable="@drawable/ic_clear"
            app:endIconMode="clear_text"
            app:helperText="@string/alphanumeric_helper_text"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconContentDescription="@string/alphanumeric_text_field_description_end_icon"
            app:startIconDrawable="@drawable/ic_favorite">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/morseTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_one"
            android:hint="@string/morse_label"
            android:inputType="textMultiLine"
            app:endIconDrawable="@drawable/ic_clear"
            app:endIconMode="clear_text"
            app:helperText="@string/morse_helper_text"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/alphaNumericTextField"
            app:startIconContentDescription="@string/morse_text_field_description_end_icon"
            app:startIconDrawable="@drawable/ic_favorite">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/dotButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/grid_two"
                    android:contentDescription="@string/fab_morse_dot"
                    app:srcCompat="@drawable/ic_dot" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/dashButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/grid_two"
                    android:contentDescription="@string/fab_morse_dash"
                    app:srcCompat="@drawable/ic_dash" />
        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_two"
            android:contentDescription="@string/fab_morse_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_play" />

</androidx.constraintlayout.widget.ConstraintLayout>